--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "theme-starter",
-  "title": "Starter Theme",
-  "displayName": "Starter Theme",
+  "name": "nitro-theme",
+  "title": "Nitro",
+  "displayName": "Nitro",
   "theme": "ui",
   "version": "0.1.0",
   "description": "A great dark theme to start your own themes.",
